# ot3di-decode

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
ot3di/: __init__.py  cli.py  losses.py  metrics.py  train.py
ot3di/data/: __init__.py  dataset.py  tokenizer.py
ot3di/model/: __init__.py  encoder.py  ot3di.py  ot_aligner.py  predictor.py  structure_encoder.py
resources/: token_weights.json
scripts/: analyze_token_dist.py  evaluate.py  train_local.sh  train_slurm.sh  visualize.py
