[project]
name = "ot3di-decode"
version = "0.1.0"
description = "Sequence to 3Di structure token prediction via Optimal Transport"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "torch>=2.0",
    "einops>=0.7",
    "transformers>=4.36",
    "datasets>=2.16",
    "sentencepiece>=0.2",
    "omegaconf>=2.3",
    "numpy>=1.26",
    "tqdm>=4.66",
    "matplotlib>=3.8",
    "sinkhorn @ git+https://github.com/vv137/sinkhorn.git",
    "wandb>=0.16",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.0"]

[project.scripts]
ot3di-train = "ot3di.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ot3di*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 150
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
